# dbow2-minimal

./: .gitignore  CMakeLists.txt  Makefile  README.txt
BUILD_A_DPKG/: README.md
BUILD_A_DPKG/DEBIAN/: control
include/: TemplatedVocabulary.h
